# coffeenote

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  docker-compose.yml  x
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: run-test.yml
coffeenote-api/: Cargo.toml
coffeenote-api/env_files/: db.env
coffeenote-api/migrations/: 20210909125302_create_bean_profile.down.sql  20210909125302_create_bean_profile.up.sql
coffeenote-api/src/: main.rs  result.rs
coffeenote-api/tls/: cert.pem  key.pem
coffeenote-core/: Cargo.toml
coffeenote-core/src/: lib.rs
coffeenote-core/src/entities/: bean.rs  mod.rs  production_area.rs  region.rs  roast.rs  roasting.rs  shop.rs
coffeenote-core/src/repositories/: bean.rs  mod.rs  production_area.rs  region.rs  shop.rs
coffeenote-core/src/tests/: harness.rs  mod.rs
coffeenote-core/src/tests/harness/: mod.rs
coffeenote-core/src/tests/harness/in_memory_repositories/: mod.rs  production_area.rs  region.rs
coffeenote-core/src/usecases/: mod.rs  production_area.rs  region.rs
coffeenote-core/src/usecases/region/: create_region.rs  delete_region.rs  fetch_one_by_region_id.rs  mod.rs  update_region.rs
src/: main.rs  result.rs
src/domain/entity/: bean.rs  mod.rs  production_area.rs  region.rs  shop.rs
src/infrastructure/database/: mod.rs  postgres.rs
