[package]
name = "coffeenote-api"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "postgres", "chrono", "migrate", "uuid"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "0.8", features = ["v4"] }
chrono = "0.4"
coffeenote-core = { path = "../coffeenote-core" }
tonic = { version = "0.5", features = ["tls"] }
prost = "0.8"
bytes = "1"
async-trait = "0.1"

[build-dependencies]
tonic-build = { version = "0.5", features = ["rustfmt"] }